Change title and update troll message in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Elhom Got Trolled</title>
+  <title>You Got Trolled</title>
   <style>
     body {
       margin: 0;
@@ -105,7 +105,7 @@
   <div class="content-box">
     <h1>💀 YOU JUST GOT TROLLED 💀</h1>
     <div class="typewriter">
-Elhom thought it was legit...  
+thought it was legit...  
 But it was me — Trollio.
 SUS detected...
 Alt+F4 to uninstall shame.exe
